<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/addNewEvent"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_event"
        android:showAsAction="always"
    />
    
    <item
        android:id="@+id/writeToTag"
        android:icon="@drawable/ic_action_network_wifi"
        android:title="@string/write_tag"
        android:showAsAction="always" />
	<group android:id="@+id/group1" > 
	    <item
	        android:id="@+id/menuOverFlow"
	        android:icon="@drawable/ic_action_overflow"
	        android:title="@string/overflow_icon"
	        android:showAsAction="always" >
		    <menu>
			    <item
			        android:id="@+id/action_deleteDeclined"
			        android:title="@string/title_deleteDeclined"
			        android:showAsAction="never" />
				
				<item
			        android:id="@+id/action_changePassword"
			        android:title="@string/title_changePassword"
			        android:showAsAction="never" />
			        
				<item
			        android:id="@+id/action_erase"
			        android:title="@string/title_erase"
			        android:showAsAction="never" />
			 
				<item
			        android:id="@+id/action_settings"
			        android:title="@string/title_settings"
			        android:showAsAction="ifRoom" />
				
				<item
			        android:id="@+id/action_about"
			        android:title="@string/title_about"
			        android:showAsAction="ifRoom" />
			</menu>
		</item>	
	</group>
	
</menu>
