<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    android:background="@drawable/gradient_grey"
    tools:context=".MessageActivity" >
        
        
        <TextView
		    android:id="@+id/section_SendNotification"
		    style="?android:attr/listSeparatorTextViewStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="15sp"
		    android:textColor="#50c0e9"
		    android:divider="#50c0e9"
		    android:dividerHeight="2dp"
		    android:text="@string/section_SendNotif"/>
		
		<TextView
		    android:id="@+id/notifyInstructions"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="14sp"
		    android:text="@string/notifyInstructions"/>
	    
        <Button
            android:id="@+id/btn_dept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            style="?android:attr/spinnerStyle"
            android:textSize="18sp"
            android:textAlignment="gravity"
            android:text="@string/btn_department" />

	    <EditText
		    android:id="@+id/et_message"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="5dp"
			android:inputType="textNoSuggestions|textCapSentences"
			android:maxLength="50"
			android:paddingBottom="13dp"
		    android:hint="@string/hint_sendNotif" />

</LinearLayout>
